-
    New feature: Assignee name shown in rich list on List Issues.
    (Real#0757)
    
    New feature: Document title is changing when a clarvoyant message
    appears on followups.
    
    New feature: Assignee is including in the CSV export from List
    Issues. (Real#0764)

    Bug fixed: Always notify could accidentally send emails to people
    not necessarily in the always notify list but with the same first
    name of the full name.
    
- 0.10.2

    Bug fixed: Fix to make it work in Zope 2.11 with content_types
    being deprecated. Real#0759, Thanks Pat Heffernan.
    
    Bug fixed: Javascript shortcuts not working when writing a
    non-quick followup (e.g. completing an issue)
    
    Bug fixed: Email address allowed non-ascii characters.
    
    Bug fixed: Javascript keyboard shortcuts not loaded correctly on
    adding issue.

- 0.10.1

    Bug fixed: Sometimes it was not possible to complete a followup
    draft since the action was incorrectly set to "Add Followup" not
    "AddFollowup".
    
    New feature: Much performance improved home page now since
    CountStatuses() now uses the catalog instead. Must press Update
    Everything button.
    
    New feature: Only the firstname is show in the menu when logged in.
    
    New feature: Upgraded to the latest jQuery 1.2.6 and removed
    jquery-latest.pack.js

    Bug fixed: Reloading Add Issue form with multiple select custom
    fields selected would cause a TypeError. Thanks Nicolas.

    Bug fixed: IssueTracker User Folder allowed to save non-unicode
    full names.
    
    Bug fixed: Uncataloging saved filters before the saved filters
    catalog had been set up could cause an AttributeError.
    
    Bug fixed: Custom fields in filters where nothing is an option
    could cause the filter to filter out all issues. 

    Bug fixed: Filtering on custom fields that are lines or ulines
    would give a ugly filtername that looks like a repr of a python
    list or tuple.
